﻿#### Hearth Of Script ####

---- V0.0.4 ----

*Added game function library
* Correcting the popup on the auto button.

---- V0.0.3 ----

* Cleaned project

---- V0.0.2 ----

* Project renamed "Hearth Of Script" from "Hearth Of Galaxy Script"
* Update AutoRoad button added
* Brilliand script added
* Button/Brilland script linked

---- V0.0.1 ----

* Project created:
	Changelog created
	License created
	Readme created
	Script Loader created
	Hello World created